--- a/open_project/src/main/res/values/styles.xml
+++ b/open_project/src/main/res/values/styles.xml
@@ -117,6 +117,20 @@
         <item name="android:windowIsFloating">false</item>
     </style>
 
+    <!--<style name="AppTheme.NoActionBar.FullScreenDialog">
+    </style>
+
+   -->
+
+    <style name="DialogAnimation">
+        <item name="android:windowAnimationStyle">@style/Animation.WindowSlideUpDown</item>
+    </style>
+
+    <style name="Animation.WindowSlideUpDown" parent="@android:style/Animation.Activity">
+        <item name="android:windowEnterAnimation">@anim/slide_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>
+
     <style name="MaterialDialogSheet" parent="@android:style/Theme.Dialog">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
