--- a/open_project/src/main/res/layout/home.xml
+++ b/open_project/src/main/res/layout/home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/home_root"
     android:animateLayoutChanges="true"
     android:orientation="vertical">
 
@@ -27,7 +28,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/red_btn_bg_pressed_color"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical">
+
+            <com.open.project.ui.Activity.SlidePage.SlidingTabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:background="@color/white" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/searchBarLayout"
@@ -57,9 +75,9 @@
                 android:background="@color/white"
                 android:ems="10"
                 android:gravity="center"
+                android:hint="Search food or places"
                 android:inputType="textPersonName"
-                android:padding="10dp"
-                android:hint="Search food or places"/>
+                android:padding="10dp" />
         </LinearLayout>
 
     </RelativeLayout>
